[package]
name = "length-push"
version = "0.1.0"
authors = ["Max Gortman <mgortman@microsoft.com>"]

[dependencies]
tokio-io = "0.1"
tokio-core = "0.1"
net2 = "*"
num_cpus = "1"
native-tls = "0.1"
clap = "2"
bytes="*"
time="*"
tokio-timer = "0.2"
error-chain = "*"
futures = "0.1"
uuid = { version = "*", features = ["v4"] }
tokio-tls = "0.1"

[profile.release]
debug = true
codegen-units = 1
lto = true
opt-level = 3